= New Features =

== 1.10 release (in progress) == #release-1.10

=== Library ===

==== Major changes ====

==== New classes ====

==== API changes ====

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===


== 1.9rc1 release (2017-04-03) == #release-1.9rc1

=== Library ===

==== Major changes ====
 * Integrate otlhs module
 * New function API
 * Canonical format low-rank tensor approximation

==== New classes ====
 * SpaceFillingPhiP, SpaceFillingMinDist, SpaceFillingC2
 * LinearProfile, GeometricProfile
 * MonteCarloLHS, SimulatedAnnealingLHS
 * LHSResult
 * MultiStart
 * MethodOfMomentsFactory
 * SymbolicFunction, AggregatedFunction, ComposedFunction, DatabaseFunction, DualLinearCombinationFunction
 * LinearCombinationFunction, LinearFunction, QuadraticFunction, ParametricFunction, IndicatorFunction
 * DistributionTransformation
 * GeneralizedExtremeValue
 * UniVariateFunctionFamily, UniVariateFunctionFactory, TensorizedUniVariateFunctionFactory
 * MonomialFunction, MonomialFunctionFactory
 * KarhunenLoeveSVDAlgorithm
 * RankMCovarianceModel
 * SparseMethod
 * CanonicalTensorEvaluation|Gradient, TensorApproximationAlgorithm|Result
 * GaussLegendre

==== API changes ====
 * Removed deprecated SLSQP, LBFGS and NelderMead classes
 * Removed deprecated QuadraticCumul class
 * Removed classes UserDefinedPair, HistogramPair
 * Removed deprecated method WeightedExperiment::getWeight
 * Removed deprecated method DistributionFactory::build(NumericalSample, CovarianceMatrix&)
 * Removed deprecated distributions alternative parameters constructors, accessors
 * Added a generic implementation of the computeLogPDFGradient() method in the DistributionImplementation class.
 * Allow Box to support bounds
 * Deprecated LinearNumericalMathFunction in favor of LinearFunction
 * Deprecated QuadraticNumericalMathFunction in favor of QuadraticFunction
 * Deprecated NumericalMathFunction::GetValidConstants|GetValidFunctions|GetValidOperators