@@ -1,16 +1,5 @@
-Remove deprecated LAR class in 1.10 version
-Remove deprecated LinearNumericalMathFunction in 1.10 version
-Remove deprecated QuadraticNumericalMathFunction in 1.10 version
-Remove deprecated NumericalMathFunction::GetValidConstants|GetValidFunctions|GetValidOperators in 1.10 version
-Remove TemporalNormalProcess alias
-Remove SpectralNormalProcess alias
-Remove GeneralizedLinearModelAlgorithm alias
-Remove GeneralizedLinearModelResult alias
-Remove DynamicalFunction aliases
-Remove SpatialFunction alias
-Remove TemporalFuncion alias
+
 Remove [gs]etOptimizationSolver methods
-Rename AnalyticalNumericalMath*Implementation to SymbolicEvaluation|Gradient|Hessian
 Remove deprecated KarhunenLoeveP1Factory, KarhunenLoeveQuadratureFactory
 Remove deprecated GramSchmidtAlgorithm, ChebychevAlgorithm
 Remove deprecated NumericalMathFunction in 1.11
